src/main/java/org/example/utils/error/OrderException.java
package org.example.utils.error;

public class OrderException extends RuntimeException {
    public OrderException(Throwable cause) {
        super(cause);
    }
}
